fixed overflow and z-indexing in index.css
some misconfigured Z-indexes were making the map inaccessible and scroll bars were appearing in unexpected places. fixed both.

--- a/index.css
+++ b/index.css
@@ -15,7 +15,6 @@
     font-weight: bold;
     letter-spacing: 0.2em;
     left: 0%;
-    overflow: hidden;
     margin-top: 5%;
     margin-left: 5%;
     z-index: 1;
@@ -27,7 +26,6 @@
     background-clip: text;
     color: transparent;
     letter-spacing: 0.2em;
-    overflow: hidden;
     top: -0.2vh;
     left: -0.2vw;
     z-index: 1;
@@ -37,18 +35,17 @@
     padding-left: 10%;
     padding-right: 10%;
     min-width:  1vw;
-    overflow: hidden;
 }
 body {
     background-color: rgba(0, 0, 0, 1);
     margin: 0;
-    overflow: hidden;
+    overflow: visible;
     width: 100vw;
     height: 100vh;
 }
 .background-image {
     position: relative;
-    overflow: hidden;
+    overflow: visible;
 }
 .map-container {
     position: relative;
@@ -57,7 +54,7 @@ body {
     margin: 0%;
     top: 0;
     left: 10vw;
-    overflow: visible;
+    z-index: 1;
 }
 .map-container::before {
     content: '';
@@ -70,7 +67,7 @@ body {
     height: 1080px;
     max-height: 100%;
     z-index: -1;
-    overflow: hidden;
+    overflow: visible;
     opacity: 80%;
 }
 
@@ -86,6 +83,7 @@ body {
     max-height: 100%;
     z-index: -1;
     opacity: 70%;
+    overflow: visible;
 }
 .gunma-area:active:before {
     content: '';
@@ -97,8 +95,9 @@ body {
     width: 1080px;
     height: 1080px;
     max-height: 100%;
-    z-index: 1;
+    z-index: -1;
     opacity: 70%;
+    overflow: visible;
 }
 
 .tochigi-area:hover:before {
@@ -113,6 +112,7 @@ body {
     max-height: 100%;
     z-index: -1;
     opacity: 70%;
+    overflow: visible;
 }
 .tochigi-area:active:before {
     content: '';
@@ -124,8 +124,8 @@ body {
     width: 1080px;
     height: 1080px;
     max-height: 100%;
-    z-index: 1;
-    overflow: scroll;
+    z-index: -1;
+    overflow: visible;
     opacity: 70%;
 }
 
@@ -140,7 +140,7 @@ body {
     height: 1080px;
     max-height: 100%;
     z-index: -1;
-    overflow: scroll;
+    overflow: visible;
     opacity: 70%;
 }
 .ibaraki-area:active:before {
@@ -153,8 +153,8 @@ body {
     width: 1080px;
     height: 1080px;
     max-height: 100%;
-    z-index: 1;
-    overflow: scroll;
+    z-index: -1;
+    overflow: visible;
     opacity: 70%;
 }
 
@@ -169,7 +169,7 @@ body {
     height: 1080px;
     max-height: 100%;
     z-index: -1;
-    overflow: scroll;
+    overflow: visible;
     opacity: 70%;
 }
 .saitama-area:active:before {
@@ -182,8 +182,8 @@ body {
     width: 1080px;
     height: 1080px;
     max-height: 100%;
-    z-index: 1;
-    overflow: scroll;
+    z-index: -1;
+    overflow: visible;
     opacity: 70%;
 }
 
@@ -198,7 +198,7 @@ body {
     height: 1080px;
     max-height: 100%;
     z-index: -1;
-    overflow: scroll;
+    overflow: visible;
     opacity: 70%;
 }
 .chiba-area:active:before {
@@ -211,8 +211,8 @@ body {
     width: 1080px;
     height: 1080px;
     max-height: 100%;
-    z-index: 1;
-    overflow: scroll;
+    z-index: -1;
+    overflow: visible;
     opacity: 70%;
 }
 
@@ -227,7 +227,7 @@ body {
     height: 1080px;
     max-height: 100%;
     z-index: -1;
-    overflow: scroll;
+    overflow: visible;
     opacity: 70%;
 }
 .tokyo-area:active:before {
@@ -240,8 +240,8 @@ body {
     width: 1080px;
     height: 1080px;
     max-height: 100%;
-    z-index: 1;
-    overflow: scroll;
+    z-index: -1;
+    overflow: visible;
     opacity: 70%;
 }
 
@@ -256,7 +256,7 @@ body {
     height: 1080px;
     max-height: 100%;
     z-index: -1;
-    overflow: scroll;
+    overflow: visible;
     opacity: 70%;
 }
 .kanagawa-area:active:before {
@@ -269,7 +269,7 @@ body {
     width: 1080px;
     height: 1080px;
     max-height: 100%;
-    z-index: 1;
-    overflow: scroll;
+    z-index: -1;
+    overflow: visible;
     opacity: 70%;
 }
